--- a/server/tests-py/queries/event_triggers/manual_events/setup.yaml
+++ b/server/tests-py/queries/event_triggers/manual_events/setup.yaml
@@ -7,6 +7,7 @@ args:
           c1 int,
           c2 text
       );
+    skip_cache_reload: false
 - type: track_table
   args:
     schema: hge_tests
