--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -241,6 +241,10 @@ library
 
                      , directory
 
+                     , random
+                     , mmorph
+                     , http-api-data
+
                      , semigroups >= 0.19.1
 
                      -- scheduled triggers
@@ -455,6 +459,7 @@ library
                      , Hasura.SQL.Time
                      , Hasura.SQL.Types
                      , Hasura.SQL.Value
+                     , Hasura.Tracing
                      , Network.URI.Extended
                      , Network.Wai.Extended
                      , Network.Wai.Handler.WebSockets.Custom
