--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -262,16 +262,8 @@ library
                      -- scheduled triggers
                      , cron >= 0.6.2
 
-                     , random
-                     , mmorph
-                     , http-api-data
-                     , lens-aeson
-                     , safe
-
-                     , semigroups >= 0.19.1
-
-                     -- scheduled triggers
-                     , cron >= 0.6.2
+                     -- casing related
+                     , casing
   if !flag(profiling)
     build-depends:
       -- 0.6.1 is supposedly not okay for ghc 8.6:
